fix : photobook, memo all